# fast_lio_nav2_humanoid

./: 2dslam.launch.py  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  docker_build.sh  docker_run.sh  walking_controller.py
FAST_LIO/config/: README.md  nav2_config.yaml  test_nav2_config.yaml
FAST_LIO/launch/: mapping.launch.py
Livox_SDK2/samples/livox_lidar_quick_start/: mid360_config.json
Livox_SDK2/samples/logger/: mid360_config.json
fast_lio_nav2_integration/: package.xml  setup.py
fast_lio_nav2_integration/config/: nav2_config.yaml
livox_ros_driver2/config/: MID360_config.json
